# buzz

./: .env.dist  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .htmlhintrc  AGENTS.md  LICENSE  README.md  README.md.bak  buzz.dist.yml  buzz.min.yml  config.dist.yml  docker-compose.dev.yml  docker-compose.yml  healthcheck.sh  main.py  pyproject.toml  rclone.conf  refactor_state.py  renovate.json  sonar-project.properties
.github/workflows/: gitleaks.yml  sonarcloud.yml  update-major-tag.yml
.gitlab/ci/: build.gitlab-ci.yml  gitleaks.gitlab-ci.yml  image-publish.gitlab-ci.yml  publish.gitlab-ci.yml  security.gitlab-ci.yml  test.gitlab-ci.yml  update-major-tag.gitlab-ci.yml
buzz/: Dockerfile  __init__.py  __main__.py  app.py  cli.py  curator_api.py  curator_app.py  dav.py  dav_app.py  dav_protocol.py  models.py  ui_live.py
buzz/core/: constants.py  curator.py  db.py  events.py  media.py  media_server.py  state.py  state.py.bak  subtitles.py  tls.py  utils.py
buzz/pyview_templates/: archive_live.html  cache_live.html  config_live.html  logs_live.html  shell_live.html
buzz/static/: buzz.css  buzz.js  prism.js  pyview_helpers.js
buzz/templates/: archive.html  cache.html  config.html  logs.html  torrents.html  trashcan.html
docs/: README.md  architecture.md  incus-dev-vm.md
docs/agents/: README.md
docs/work-items/: README.md  adopt-pyview.md  code-quality-improve-1.md  config-ui.md  dependency-supply-chain-checks.md  expose-logs-in-the-interface.md  gitlab-cutover.md  hover-marquee-for-truncated-table-titles.md  implement-basic-security.md  jellyfin-auto-bootstrap.md  migrate-json-to-sqlite.md  opensubtitles-integration.md  selective-sync.md  setup-docs-truth.md  typed-interface-boundaries.md
maint-scripts/: update_dependency_refs.py
presentation/: overrides.dist.yml  overrides.yml
scripts/: curator-entrypoint.sh  generate_self_signed_cert.py  jellyfin_update.sh  media_update.sh  migrate_config.py  plex_update.ps1  plex_update.sh  presentation_builder.py
tests/: test_buzz.py  test_curator_app.py  test_db.py  test_events.py  test_media_and_utils.py  test_presentation_builder.py  test_subtitles.py  test_update_dependency_refs.py  test_vfs_sync.py
(+7 files in other folders)
