[project]
name = "plex-zurg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.0.0",
    "pyyaml>=6.0.1",
    "rd-api-py>=0.1.0",
    "typing-extensions>=4.0.0",
]

[tool.setuptools]
packages = ["buzz", "buzz.core"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
