[project]
name = "buzz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "pydantic>=2.0.0",
  "pyyaml>=6.0.1",
  "rd-api-py>=0.1.0",
  "typing-extensions>=4.0.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "jinja2>=3.1.0",
  "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["buzz", "buzz.core"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pyright>=1.1.408"]
