[project]
name = "buzz"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "pydantic>=2.0.0",
  "pyyaml>=6.0.1",
  "rd-api-py>=0.1.0",
  "typing-extensions>=4.0.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "jinja2>=3.1.0",
  "httpx>=0.27.0",
  "pyview-web>=0.8.3",
]

[tool.setuptools]
packages = ["buzz", "buzz.core"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = ["pyright>=1.1.408", "pytest>=8.0.0", "pytest-cov>=6.0.0", "ruff>=0.9.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["*Tests"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "D",   # pydocstyle
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
